# LLM_Proxy

./: .gitattributes  .gitignore  AGENTS.md  PROJECT_MEMORY.md  README.md  config.sample.yaml  config.yaml  main.py  pyproject.toml
docs/: architecture-4plus1.md  refactor-plan-cliproxyapi.md
hooks/: deepseek_openai_compat.py  example_hook.py  glm_openai_compat.py  minimax_openai_compat.py  openai_reasoning_common.py  openai_reasoning_compat.py  qwen_openai_compat.py
scripts/sql/: 001_migrate_created_at_to_localtime.sql  002_rebuild_tables_remove_time_defaults.sql
src/application/: __init__.py  app_context.py  application.py
src/config/: __init__.py  auth_group_manager.py  config_manager.py  provider_config.py  provider_manager.py  provider_runtime_factory.py
src/executors/: __init__.py  contracts.py  registry.py
src/hooks/: __init__.py  contracts.py
src/presentation/: __init__.py  api_key_controller.py  app_factory.py  auth_controller.py  controller_utils.py  cors.py  (+6 more)
tests/: test_api_key_management.py  test_auth_groups.py  test_claude_oauth_service.py  test_claude_proxy_service.py  test_codex_oauth_service.py  test_codex_proxy_service.py  test_cors.py  test_dashboard_defaults.py  test_dashboard_filters.py  test_hook_contracts.py  test_local_time_storage.py  test_oauth_controller.py  test_provider_controller.py  test_provider_model_test_service.py  test_provider_runtime_factory.py  test_provider_service.py  test_proxy_error_handling.py  test_proxy_pipeline.py  test_proxy_transport.py  test_proxy_warning.py  test_settings_service.py  test_user_model_permissions.py  test_user_sorting.py
(+70 files in other folders)
