[project]
name = "000llm-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "flask>=2.2.5,<3; python_version < '3.9'",
    "flask>=3.1.3; python_version >= '3.9'",
    "gevent>=22.10.2,<26; python_version < '3.9'",
    "gevent>=26.4.0; python_version >= '3.9'",
    "pyyaml>=6.0.1,<7; python_version < '3.9'",
    "pyyaml>=6.0.3; python_version >= '3.9'",
    "requests>=2.31.0,<3; python_version < '3.10'",
    "requests>=2.33.1; python_version >= '3.10'",
    "typing-extensions>=4.7.1; python_version < '3.10'",
    "urllib3>=2.0.7,<3; python_version < '3.9'",
    "urllib3>=2.6.3; python_version >= '3.9'",
    "websocket-client>=1.5.3,<2; python_version < '3.9'",
    "websocket-client>=1.9.0; python_version >= '3.9'",
]
